Minor code clean up.